Extend model Requisition to contain new fields

--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
 Refactor getReq and getAllReq, they should rely on the data type to perform their actions.
 Work on approve and generate orders.
 Complete refactor among other UIs.
+
+Steps from here
+===============
+Generate Purchase Order
+Create Invoice
+Handle Delivery @ Warehouse
