--- a/TODO
+++ b/TODO
@@ -1,5 +1,12 @@
 Refactor javascript to use more advanced language features. e.g. inheritance, object and class augmentation 
 and object-oriented style.
+Write AjaxPost object, refactor all other functions to use object model like AjaxGet()
+Remove "Add Item" link from approved requisition detail.
+Ideally, purchase Order drop-down should only display vendors who have line items
+Folderize files in the template folder, if possible do same for controllers
+Add created_by column to PO table and cascade to controller and templates.
+
+
 
 Steps from here
 ===============
@@ -7,11 +14,25 @@ Generate Purchase Order
 Create Invoice
 Handle Delivery @ Warehouse
 
-
-Write AjaxPost object, refactor all other functions to use object model like AjaxGet()
-Remove "Add Item" link from approved requisition detail.
-
 Purchase Order plan
 ===================
-"Add another Item" button should add item and display the form.
-"Create" button should add and display PO preview with links to perform further actions.
+Create a quantity_ordered column in line item table
+For each line item added to PO, add value from quantity field to value of LineItem.quantity_ordered
+Create a many to many ER mapping on LineItem->PurchaseOrder
+
+Many-to-Many relationship
+=========================
+What we are trying to acheive is a situation where a line item can be split between two or more purchase orders.
+i.e. If 10 line items are ordered, we can order 5 in one purchase order and 5 in another purchase order. Ideally, we should have a many-to-many relationship between purchaseorder and lineitem tables so that we would be able to track how many line items are in one purchase order and how many purchase orders were used to order a particular line item.
+
+For now, lets order all of a particular line item in one purchase order so that we would have a one-to-many relationship between purchaseorder and lineitem tables. Then we would be able to track the details of all the line items in a given purchase order.
+
+Purchase order creation How-to
+==============================
+Another approach is:
+    * Create the PO without any lineitem. At this point, total_amount is 0
+    * Then add line item separately and increment total_amount as each line item is added.
+PO Delete
+=========
+    * There's no room for editing PO except to add line item, if anything else needs to be edited, then it has to be vendor name. Then the PO would be deleted and re-created.
+    * Same with PO line item, user can only delete, no editing.
