--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ Remove lineitems from po_object, write a separate controller action to populate 
 Remove Delete links from PO and Invoice view pages.
 Add "View Invoices" functionality later. For now its commented out in menu.html.
 System should catch errors when invoice total amount does not match PO total amount.
+Knock off the "Delete" link properly on purchase order page if invoice is received.
 
 * Ideally, purchase Order drop-down should only display vendors who have line items. I tried this out and it worked, the only issue is documented in models.
 Check "PO does not exist" error in receiving.html
