--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 Refactor javascript to use more advanced language features. e.g. inheritance, object and class augmentation 
 and object-oriented style.
 Write AjaxPost object, refactor all other functions to use object model like AjaxGet()
-Remove "Add Item" link from approved requisition detail.
 Folderize files in the template folder, if possible do same for controllers
 Add created_by column to requisition table and cascade to controller and templates.
 Maybe we might need to add user.purchase_orders and user.requisitions relations just like we have user.approvedrequisitions, for system reports based on users, to track user actions.
@@ -15,15 +14,9 @@ Remove Delete links from PO and Invoice view pages.
 Add "View Invoices" functionality later. For now its commented out in menu.html.
 System should catch errors when invoice total amount does not match PO total amount.
 Knock off the "Delete" link properly on purchase order page if invoice is received.
-
 * Ideally, purchase Order drop-down should only display vendors who have line items. I tried this out and it worked, the only issue is documented in models.
-Check "PO does not exist" error in receiving.html
-FFix bug in "View Purchase Orders".
-
-Steps from here
-===============
-Create Invoice
-Handle Delivery @ Warehouse
+If we attempt to receive and un-invoiced PO, an exception should be thrown.
+Remove "Add Item" link from approved requisition detail and closed requisition.
 
 Many-to-Many relationship
 =========================
@@ -37,18 +30,8 @@ PO Delete
     * For now, you cannot delete PO, will look into that later.
     * User can delete PO line item after it has been added (i.e. line item has been ordered). This action should revert all actions in LineItem.order() in the same sequence.
 
-Close Requisition
-=================
-Get status of all items with req_id
-If all status are 2:"Delivered", set req's status to 3:"Closed"
-Else, do nothing.
-
 Fine-tuning Invoice
 ==================
 Invoice should relate with PO and store its items in another table.
 Knock off invoice_no field in lineitem table.
 We may add "Invoice Received" status to PO.
-
-Receiving
-=========
-If we attempt to receive and un-invoiced PO, an exception should be thrown.
